--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ animation: infinite 10s rgb;
     
 }
 .content{
-    background-image: url("Carina2.jpg");
+    background-image: url("carina2.jpg");
     background-size: cover;
     height: 100vh;
     width: 100%;
